Docs - add `Getting Started With RTK Query` page

--- a/docs/api/rtk-query/fetchBaseQuery.mdx
+++ b/docs/api/rtk-query/fetchBaseQuery.mdx
@@ -8,7 +8,7 @@ hide_table_of_contents: false
 
 # `fetchBaseQuery`
 
-This is a very small wrapper around `fetch` that aims to simplify requests. It is not a full-blown replacement for `axios`, `superagent`, or any other more heavy-weight library, but it will cover the large majority of your needs.
+This is a very small wrapper around [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) that aims to simplify requests. It is not a full-blown replacement for `axios`, `superagent`, or any other more heavy-weight library, but it will cover the large majority of your needs.
 
 It takes all standard options from fetch's [`RequestInit`](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch) interface, as well as `baseUrl`, a `prepareHeaders` function, and an optional `fetch` function.
 
