--- a/docs/usage/rtk-query/optimistic-updates.mdx
+++ b/docs/usage/rtk-query/optimistic-updates.mdx
@@ -12,7 +12,7 @@ When you're performing an update on some data that _already exists_ in the cache
 The core concepts are:
 
 - when you start a query or mutation, `onQueryStarted` will be executed
-- you manually update the cached data by dispatching `api.util.updateQueryResult`
+- you manually update the cached data by dispatching `api.util.updateQueryData`
 - then, in the case that `promiseResult` rejects, you roll it back via the `.undo` property of the object you got back from the earlier dispatch.
 
 ```ts title="Optimistic update mutation example (async await)"
@@ -46,7 +46,7 @@ const api = createApi({
       // highlight-start
       async onQueryStarted({ id, ...patch }, { dispatch, queryFulfilled }) {
         const patchResult = dispatch(
-          api.util.updateQueryResult('getPost', id, (draft) => {
+          api.util.updateQueryData('getPost', id, (draft) => {
             Object.assign(draft, patch)
           })
         )
@@ -68,7 +68,7 @@ or, if you prefer the slighty shorter version with `.catch`
 -      async onQueryStarted({ id, ...patch }, { dispatch, queryFulfilled }) {
 +      onQueryStarted({ id, ...patch }, { dispatch, queryFulfilled }) {
         const patchResult = dispatch(
-          api.util.updateQueryResult('getPost', id, (draft) => {
+          api.util.updateQueryData('getPost', id, (draft) => {
             Object.assign(draft, patch)
           })
         )
