--- a/docs/usage/rtk-query/streaming-updates.mdx
+++ b/docs/usage/rtk-query/streaming-updates.mdx
@@ -11,7 +11,7 @@ RTK Query gives you the ability to receive **streaming updates** for persistent 
 
 Streaming updates can be used to enable the API to receive real-time updates to the back-end data, such as new entries being created, or important properties being updated.
 
-To enable streaming updates for a query, pass the asynchronous `onCacheEntryAdded` function to the query, including the logic for how to update the query when streamed data is received. See [anatomy of an endpoint](../../api/rtk-query/createApi#anatomy-of-an-endpoint) for more details.
+To enable streaming updates for a query, pass the asynchronous `onCacheEntryAdded` function to the query, including the logic for how to update the query when streamed data is received. See [`onCacheEntryAdded` API reference](../../api/rtk-query/createApi#onCacheEntryAdded) for more details.
 
 ## When to use streaming updates
 
